--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jackson-haunt-dev-conf</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Magnolia Conf</title>
+    <meta name="description" content="Mississippi's premiere software development conference." />
 
-    <meta property="og:title" content="jackson-haunt-dev-conf" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Magnolia Conf" />
+    <meta
+      property="og:description"
+      content="Mississippi's premiere software development conference."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
